codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__status_line_goal_active_token_budget_footer.snap
---
source: tui/src/chatwidget/tests/status_and_layout.rs
assertion_line: 4257
expression: normalized_backend_snapshot(terminal.backend())
---
"                                                                                "
"▌                                                                               "
"▌ Ask Codex to do anything                                                      "
"▌                                                                               "
"  GPT-5.5                                            Pursuing goal (40K / 50K)  "
